# IOT-_SHADOW

certs/: ca.crt  ca.key  ca.srl  server.conf  server.csr  server.key
client/: CMakeLists.txt  Dockerfile  STRUCTURE.md  main.cpp
client/certs/: server.crt
client/config/: config.txt  device.conf
client/logs/: hardware_metrics_2025-06-17_15-42-03.json  hardware_metrics_2025-06-17_15-43-02.json  hardware_metrics_2025-06-17_15-44-03.json  hardware_metrics_2025-06-17_15-45-03.json  hardware_metrics_2025-06-17_15-46-03.json  hardware_metrics_2025-06-17_15-47-02.json  hardware_metrics_2025-06-17_15-48-03.json  hardware_metrics_2025-06-17_15-49-03.json  hardware_metrics_2025-06-17_15-50-03.json  hardware_metrics_2025-06-17_15-51-03.json  hardware_metrics_2025-06-17_15-52-04.json  hardware_metrics_2025-06-21_12-53-01.json  hardware_metrics_2025-06-21_12-54-01.json  hardware_metrics_2025-06-21_12-55-01.json  hardware_metrics_2025-06-21_12-56-01.json  hardware_metrics_2025-06-21_12-57-01.json  hardware_metrics_2025-06-21_12-58-01.json  hardware_metrics_2025-06-21_12-59-01.json  hardware_metrics_2025-06-21_13-00-01.json  hardware_metrics_2025-06-21_13-01-01.json  hardware_metrics_2025-06-21_13-02-01.json  hardware_metrics_2025-06-23_12-02-01.json  hardware_metrics_2025-06-23_12-03-01.json  hardware_metrics_2025-06-23_12-04-01.json  hardware_metrics_2025-06-23_12-05-01.json  hardware_metrics_2025-06-23_12-06-01.json  hardware_metrics_2025-06-23_12-07-01.json  hardware_metrics_2025-06-23_12-08-01.json  hardware_metrics_2025-06-23_12-09-01.json  hardware_metrics_2025-06-23_12-10-01.json  hardware_metrics_2025-06-23_12-11-01.json  hardware_metrics_2025-06-23_12-12-01.json  hardware_metrics_2025-06-23_22-47-01.json  hardware_metrics_2025-06-23_22-48-01.json  hardware_metrics_2025-06-23_22-49-01.json  hardware_metrics_2025-06-23_22-50-01.json  hardware_metrics_2025-06-23_22-51-01.json  hardware_metrics_2025-06-23_22-52-01.json  hardware_metrics_2025-06-23_22-53-01.json  hardware_metrics_2025-06-23_22-54-01.json  (+46 more)
client/monitoring-service/include/: metrics_collector.h
client/monitoring-service/src/: metrics_collector.cpp
client/provision-service/include/: ConfigManager.h
client/provision-service/src/: ConfigManager.cpp
client/scripts/: collect_metrics.sh
proto/: monitoring.proto
server/: CMakeLists.txt  main.cpp
server/common/include/: db_handler.h
server/common/src/: db_handler.cpp
server/config/: thresholds.json
server/monitoring-service/include/: alert_manager.h  metrics_analyzer.h  mysql_metrics_storage.h
server/monitoring-service/src/: metrics_analyzer.cpp  mysql_metrics_storage.cpp  rabbitmq_consumer.cpp
server/ota-service/include/: db_handler.h  ota_update_service.h
server/ota-service/src/: db_handler.cpp
server/provision-service/include/: ProvisionServiceImpl.h  db_handler.h
server/provision-service/src/: ProvisionServiceImpl.cpp  db_handler.cpp
